Fix spacing issue in subheading
- Fixed spacing issues with `h3` tags by removing the top margin.

--- a/styles/main-blog.css
+++ b/styles/main-blog.css
@@ -17,6 +17,10 @@ time {
 
 /* Layout */
 
+h3 {
+    margin-top: 0;
+}
+
 img {
     padding-block: 2.25em;
 }
@@ -25,7 +29,7 @@ main {
     padding: 1.25em;
 }
 
-section.content {
+article.content {
     display: flex;
     flex-direction: column;
 }
